# youbot

./: .gitignore  .gitmodules  README.md
workspaces/andrew/src/FABMAP-Version-2-0/: CMakeLists.txt  LICENCE  README  README_BUILD  README_RUNNING
workspaces/andrew/src/FABMAP-Version-2-0/CmakeModules/: FindImageMagick.cmake  FindMOOS.cmake  FindSTXXL.cmake  OptionalBuild.cmake  SetPlatform.cmake
workspaces/andrew/src/FABMAP-Version-2-0/Examples/RunningFabMapExample/: Readme.txt
workspaces/andrew/src/FABMAP-Version-2-0/Examples/RunningFabMapExample/Resources/Vocabularies/: README
workspaces/andrew/src/FABMAP-Version-2-0/Examples/VocabGenerationExample/: Readme.txt
workspaces/andrew/src/FABMAP-Version-2-0/FabMapCommon/include/: IOHelperFunctions.h  MAT_parser.h  MJCMath.h  OXS_iterator.h  OXS_parser.h  OXS_parser_helper.h  ProgressMeter.h  TypeDefinitions.h
workspaces/andrew/src/FABMAP-Version-2-0/FabMapCommon/src/: CMakeLists.txt  IOHelperFunctions.cpp  MAT_parser.cpp  MJCMath.cpp  OXS_iterator.cpp  OXS_parser.cpp  OXS_parser_helper.cpp
workspaces/andrew/src/FABMAP-Version-2-0/FabMapV2/: CMakeLists.txt
workspaces/andrew/src/FABMAP-Version-2-0/FabMapV2/examples/: CMakeLists.txt  main.cpp
workspaces/andrew/src/FABMAP-Version-2-0/FabMapV2/include/: FabMap.h  InnerLoop.h  KeyframeDetector.h  LocationPrior.h  RankingFunction.h  Sampler.h  config.h
workspaces/andrew/src/FABMAP-Version-2-0/FabMapV2/python/: Boost.python DLL problems readme.txt  CMakeLists.txt  FabMapPythonInterface.cpp  fabmap_example.py
workspaces/andrew/src/FABMAP-Version-2-0/FabMapV2/src/: BatchProcess.cpp  CMakeLists.txt  ExternalAPI.cpp  FabMap.cpp  FabMapMain.cpp  FileIO.cpp  InnerLoop.cpp  KeyframeDetector.cpp  LocationPrior.cpp  RankingFunction.cpp  Sampler.cpp
workspaces/andrew/src/FABMAP-Version-2-0/KMeans/: CMakeLists.txt
workspaces/andrew/src/FABMAP-Version-2-0/KMeans/config/: SampleConfig.moos
workspaces/andrew/src/FABMAP-Version-2-0/KMeans/documentation/: Readme.txt
workspaces/andrew/src/FABMAP-Version-2-0/KMeans/include/: FileIO.h  mpi_kmeans.h  pKMeans.h
workspaces/andrew/src/FABMAP-Version-2-0/KMeans/matlab/: LoadClusteringResults.m  WriteFeatureFile.m
workspaces/andrew/src/FABMAP-Version-2-0/KMeans/src/: CMakeLists.txt  ClusterInitializationMethods.cpp  IOHelperFunctions.cpp  approx_kmeans.cpp  mpi_kmeans.cxx  pKMeans.cpp  pKMeansMain.cpp
workspaces/andrew/src/FABMAP-Version-2-0/WordMaker/: CMakeLists.txt  Makefile
workspaces/andrew/src/FABMAP-Version-2-0/WordMaker/config/: BatchConfig.moos  Example.excluded_regions  GoogleCityblockCar.excluded_regions  Ladybug_on_1000kmCar.excluded_regions  SURFConfig.moos
workspaces/andrew/src/FABMAP-Version-2-0/WordMaker/include/: InterestPoint.h  SurfToolsInterface.h  WordMaker.h  WordMakerDataTypes.h
workspaces/andrew/src/FABMAP-Version-2-0/WordMaker/include/SurfInterface/ethsurf/: SurfTools.h
workspaces/andrew/src/FABMAP-Version-2-0/WordMaker/python/: Boost.python DLL problems readme.txt  CMakeLists.txt  WordMakerPythonInterface.cpp  wordmaker_example.py
workspaces/andrew/src/FABMAP-Version-2-0/WordMaker/src/: CMakeLists.txt  ExternalAPI.cpp  FileIO.cpp  Makefile  WordMaker.cpp  WordMakerMain.cpp
workspaces/andrew/src/FABMAP-Version-2-0/pAcceleratedChowLiu_CompactMemory/: CMakeLists.txt
workspaces/andrew/src/FABMAP-Version-2-0/pAcceleratedChowLiu_CompactMemory/config/: SampleConfig.moos
workspaces/andrew/src/FABMAP-Version-2-0/pAcceleratedChowLiu_CompactMemory/include/: AcceleratedCL.h  DataTypes.h  GlobalOperators.h  SparseContainers.h  kruskal.h
workspaces/andrew/src/FABMAP-Version-2-0/pAcceleratedChowLiu_CompactMemory/src/: AcceleratedCL.cpp  AcceleratedCLMain.cpp  CMakeLists.txt
workspaces/andrew/src/FABMAP-Version-2-0/pAcceleratedChowLiu_Fast/: CMakeLists.txt
workspaces/andrew/src/FABMAP-Version-2-0/pAcceleratedChowLiu_Fast/include/: AcceleratedCL.h  DataTypes.h  GlobalOperators.h  SparseContainers.h
workspaces/andrew/src/FABMAP-Version-2-0/pAcceleratedChowLiu_Fast/src/: AcceleratedCL.cpp  AcceleratedCLMain.cpp  CMakeLists.txt
workspaces/andrew/src/cyphy-vis-slam/openfabmap2/src/: CMakeLists.txt  learn_node.cpp  openfabmap2_ros.cpp  openfabmap2_ros.h  run_node.cpp
workspaces/andrew/src/cyphy-vis-slam/slam_backend/: CMakeLists.txt  mainpage.dox  manifest.xml
workspaces/andrew/src/cyphy-vis-slam/slam_backend/launch/: defaults.launch
workspaces/andrew/src/cyphy-vis-slam/slam_backend/msg/: AddLoopClosure.msg  Graph.msg  NodeAdded.msg
workspaces/andrew/src/cyphy-vis-slam/slam_backend/msg_gen/lisp/: AddLoopClosure.lisp  Graph.lisp  NodeAdded.lisp  _package.lisp  _package_AddLoopClosure.lisp  _package_Graph.lisp  _package_NodeAdded.lisp  slam_backend-msg.asd
workspaces/andrew/src/cyphy-vis-slam/slam_backend/src/: edge_se2_vis.h  slam_backend.cpp  vertex_se2_vis.h
workspaces/raha/src/youbot_camera/: CMakeLists.txt  package.xml
workspaces/raha/src/youbot_kinematics/: CMakeLists.txt  package.xml
workspaces/raha/src/youbot_kinematics/src/: YoubotArmKinematicsPlugin.cpp  YoubotArmKinematicsPlugin.h
workspaces/raha/src/youbot_kinematics/src/YoubotIK/: YoubotArmAnalyticalIK.cpp  YoubotArmIKSolver.cpp
workspaces/yiming/src/kdl_kinematics_plugin_upgrade/: CMakeLists.txt  kdl_kinematics_plugin_upgrade_description.xml  package.xml
workspaces/yiming/src/kdl_kinematics_plugin_upgrade/include/moveit/kdl_kinematics_plugin_upgrade/: chainiksolver_vel_pinv_mimic.hpp
workspaces/yiming/src/kdl_kinematics_plugin_upgrade/msg/: KDLOptionsIK.msg
workspaces/yiming/src/kdl_kinematics_plugin_upgrade/src/: chainiksolver_pos_nr_jl_mimic.cpp  chainiksolver_vel_pinv_mimic.cpp  kdl_kinematics_plugin.cpp
workspaces/yiming/src/kdl_kinematics_plugin_upgrade/src/kdl_kinematics_plugin_upgrade/cfg/: kdl_ik_paramsConfig.py
workspaces/yiming/src/youbot_relay_controller/: CMakeLists.txt
workspaces/yiming/src/youbot_relay_controller/include/youbot_relay_controller/: youbot_relay_controller.h
workspaces/yiming/src/youbot_relay_controller/src/: active_relay.cpp  passive_relay.cpp  youbot_relay_controller.cpp
(+1060 files in other folders)
