#build a list of files to compile
SET(pAcceleratedChowLiu_SRCS
  AcceleratedCLMain.cpp
  AcceleratedCL.cpp
)

# Add executable
ADD_EXECUTABLE( pAcceleratedChowLiu_Fast ${pAcceleratedChowLiu_SRCS})
TARGET_LINK_LIBRARIES(pAcceleratedChowLiu_Fast FabMapCommon ${PLATFORM_LIBS} ${MOOS_LIBRARIES} ${STXXL_LIBRARIES} ${Boost_LIBRARIES})


ADD_DEFINITIONS(
-DSORT_OPT_PREFETCHING
-DUSE_MALLOC_LOCK
-DCOUNT_WAIT_TIME
-D_FILE_OFFSET_BITS=64
-D_LARGEFILE_SOURCE
-D_LARGEFILE64_SOURCE
)

IF(WIN32)
	ADD_DEFINITIONS(
	-D_RTLDLL
	-DBOOST_LIB_DIAGNOSTIC
	-DSTXXL_BOOST_TIMESTAMP
	-DSTXXL_BOOST_CONFIG
	-DSTXXL_BOOST_FILESYSTEM
	-DSTXXL_BOOST_THREADS
	-DSTXXL_BOOST_RANDOM
	-D_SCL_SECURE_NO_DEPRECATE
	)
ENDIF(WIN32)
